k8s/istio/backend-virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-virtualservice
  namespace: istio-system 
spec:
  hosts:
    - api.serhatsari.dev
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /api  
      route:
        - destination:
            host: backend-service.default.svc.cluster.local 
            port:
              number: 80
