k8s/istio/frontend-virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-virtualservice
  namespace: istio-system 
spec:
  hosts:
    - frontend.serhatsari.dev
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend-service.default.svc.cluster.local 
            port:
              number: 80
