k8s/istio/grafana-virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: istio-system
spec:
  hosts:
    - grafana.serhatsari.dev
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prom-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
